--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,9 @@
   </head>
 
   <body>
-    <main class="container mx-auto mt-28 px-5 flex">
-      <%= yield %>
+      <%= render "layouts/header_nav" %>
+      <main class="container mx-auto mt-28 px-5">
+        <%= yield %>
     </main>
   </body>
 </html>
