--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body>
       <%= render "layouts/header_nav" %>
-      <main class="container mx-auto mt-16 px-5">
+      <main class="container mx-auto mt-16 px-5 lg:px-20">
         <%= yield %>
     </main>
   </body>
