--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -1,4 +1,12 @@
 <div>
   <h1 class="font-bold text-4xl">Public#index</h1>
   <p>Find me in app/views/public/index.html.erb</p>
+
+  <% if current_user %>
+    <p>Logged in as <%= current_user.email %>
+    <%= link_to "Logout", destroy_user_session, data: { turbo_method: :delete } %>
+  <% else %>
+    <%= link_to "Login", new_user_session_path %>
+    <%= link_to "Sign up", new_user_registration_path %>
+  <% end %>
 </div>
