--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -3,8 +3,8 @@
   <p>Find me in app/views/public/index.html.erb</p>
 
   <% if current_user %>
-    <p>Logged in as <%= current_user.email %>
-    <%= link_to "Logout", destroy_user_session, data: { turbo_method: :delete } %>
+    <p>Logged in as <%= link_to current_user.email, user_path(current_user) %>
+    <%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete } %>
   <% else %>
     <%= link_to "Login", new_user_session_path %>
     <%= link_to "Sign up", new_user_registration_path %>
